--- a/templates/home.html
+++ b/templates/home.html
@@ -18,11 +18,17 @@
       <div class="Jumbotron">
                   <h2>Posts</h2>
               <div id="postBag">
-                    {% for sender, content, createdAt, receiver, senderPic, comments, postPK in wallPosts %}
+                    {% for sender, content, createdAt, receiver, senderPic, comments, postPK, isLiked, likes, likers in wallPosts %}
                       <div class="wallPost">
                         <div class="postSender">
                             <p>from: <a href="/user/{{ sender }}">  {{ sender }}</a> to: <a href="/user/{{ receiver }}"> {{ receiver }}</a></p>
                             <img src="{{ senderPic }}" class="img-rounded" width="100" height="100">
+                            <h5 id="postLike{{ postPK }}" style="float:right;">{{ likes }}</h5>
+                            {% if isLiked == True %}
+                                <p style="float:right;"><a class='btn btn-success' data-toggle="tooltip" title="{{ likers }} like this" onclick="likeComment({{ postPK }})" role='button'>Like</a></p>
+                            {% elif isLiked == False %}
+                                <p style="float:right;"><a class='btn' data-toggle="tooltip" title="{% for x in likers %} {{ x }}, {% endfor %} like this" onclick="likeComment({{ postPK }})" role='button'>Like</a></p>
+                            {% endif %}
                         </div>
                         <div class="postContent">
                           <p> {{ content }}</p>
