Added picture description to upload form

--- a/templates/uploadPic.html
+++ b/templates/uploadPic.html
@@ -17,6 +17,9 @@
                 {{ form.docfile.errors }}
                 {{ form.docfile }}
             </p>
+            <p>
+                {{ form.description2 }}
+            </p>
             <p><input type="submit" value="Upload" /></p>
         </form>
     </body>
