--- a/templates/signUpLogin.html
+++ b/templates/signUpLogin.html
@@ -48,12 +48,13 @@
         <div id="navbar" class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
                 <div class="form-group">
-                    <input id="signInEmail" type="text" placeholder="Email" class="form-control">
+                    <input id="signInEmail" type="text" placeholder="Username" class="form-control">
                 </div>
                 <div class="form-group">
                     <input id="signInPass" type="password" placeholder="Password" class="form-control">
                 </div>
                 <button type="submit" id="signInSubmit" class="btn btn-success">Sign in</button>
+                <div id="dialogBoxLogin"></div>
                 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
                 </fb:login-button>
             </form>
