--- a/templates/signUpLogin.html
+++ b/templates/signUpLogin.html
@@ -85,17 +85,17 @@
         <div class="col-md-4">
             <h2>Post to walls</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#" disabled="disabled" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Post to other people's walls</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#" disabled="disabled" role="button">View details &raquo;</a></p>
         </div>
         <div class="col-md-4">
             <h2>Comment and view profiles</h2>
             <p>Donec swed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#" disabled="disabled" role="button">View details &raquo;</a></p>
         </div>
     </div>
     </div>
