--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -46,7 +46,7 @@
                             <img src="{{ senderPic }}" class="img-rounded" width="100" height="100">
                             <h5 id="postLike{{ postPK }}" style="float:right;">{{ likes }}</h5>
                             {% if isLiked == True %}
-                                <p style="float:right;"><a class='btn btn-success' data-toggle="tooltip" title="{{ likers }} like this" onclick="likeComment({{ postPK }})" role='button'>Like</a></p>
+                                <p style="float:right;"><a class='btn btn-success' data-toggle="tooltip" title="{{ likers }} like this" onclick="likeComment({{ postPK }})" role='button'>Unlike</a></p>
                             {% elif isLiked == False %}
                                 <p style="float:right;"><a class='btn' data-toggle="tooltip" title="{% for x in likers %} {{ x }}, {% endfor %} like this" onclick="likeComment({{ postPK }})" role='button'>Like</a></p>
                             {% endif %}
