--- a/templates/footer.html
+++ b/templates/footer.html
@@ -14,6 +14,6 @@
 <!-- Placed at the end of the document so the pages load faster -->
 </body>
 <script type="text/javascript" src="/static/socialMedia/jquery.easyPaginate.js"></script>
-<script type="text/javascript" src="/static/socialMedia/home.js"></script>
+<!--<script type="text/javascript" src="/static/socialMedia/home.js"></script>-->
 <script type="text/javascript" src="/static/socialMedia/header.js"></script>
 </html>
