--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,5 @@
 {% include "header.html" %}
+<script>var userName = "{{ request.user.username }}";</script>
 
 <div class="container-fluid">
       <div class="row">
@@ -15,13 +16,23 @@
           <div class="container">
 
 
+          <div class="Jumbotron">
+                  <h2>What's new:</h2>
+                  <textarea id='wallTextArea' class="form-control" rows="3" placeholder="Say hello!"></textarea>
+                  <button id='writeToWallHome' type="button" style="float:right;" class="btn btn-lg btn-primary">Send</button>
+              </div>
+
       <div class="Jumbotron">
                   <h2>Posts</h2>
               <div id="postBag">
                     {% for sender, content, createdAt, receiver, senderPic, comments, postPK, isLiked, likes, likers in wallPosts %}
                       <div class="wallPost">
                         <div class="postSender">
+                        {% if sender == receiver %}
+                            <p>from: <a href="/user/{{ sender }}">  {{ sender }}</a></p>
+                        {% else %}
                             <p>from: <a href="/user/{{ sender }}">  {{ sender }}</a> to: <a href="/user/{{ receiver }}"> {{ receiver }}</a></p>
+                        {% endif %}
                             <img src="{{ senderPic }}" class="img-rounded" width="100" height="100">
                             <h5 id="postLike{{ postPK }}" style="float:right;">{{ likes }}</h5>
                             {% if isLiked == True %}
