--- a/templates/headerLogin.html
+++ b/templates/headerLogin.html
@@ -39,15 +39,28 @@
             <a class="navbar-brand" href="#">Social Media Project</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
+            <form class="navbar-form navbar-right" method="post">
+                {% csrf_token %}
+                <!--<div class="form-group">
                     <input id="signInEmail" type="text" placeholder="Username" class="form-control">
                 </div>
                 <div class="form-group">
                     <input id="signInPass" type="password" placeholder="Password" class="form-control">
+                </div>-->
+                <div class="form-group">
+{#                    <!--{{ loginForm.userName.label }}-->#}
+                    {{ loginForm.userName.errors }}
+                    {{ loginForm.userName }}
+                </div>
+                <div class="form-group">
+{#                    <!--{{ loginForm.password.label }}-->#}
+                    {{ loginForm.password.errors }}
+                    {{ loginForm.password }}
                 </div>
                 <button type="submit" id="signInSubmit" class="btn btn-success">Sign in</button>
-                <div id="dialogBoxLogin"></div>
+{#                <div id="dialogBoxLogin">#}
+{#                    #}
+{#                </div>#}
                 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
                 </fb:login-button>
             </form>
