--- a/templates/signUpLogin.html
+++ b/templates/signUpLogin.html
@@ -46,13 +46,14 @@
             <a class="navbar-brand" href="#">Social Media Project</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
+            <form class="navbar-form navbar-right" action="/headerSignIn2/" method="post">
+                <!--<div class="form-group">
                     <input id="signInEmail" type="text" placeholder="Username" class="form-control">
                 </div>
                 <div class="form-group">
                     <input id="signInPass" type="password" placeholder="Password" class="form-control">
-                </div>
+                </div>-->
+                {{ loginForm }}
                 <button type="submit" id="signInSubmit" class="btn btn-success">Sign in</button>
                 <div id="dialogBoxLogin"></div>
                 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
