--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -32,6 +32,14 @@
                   <textarea id='wallTextArea' class="form-control" rows="3" placeholder="Say hello!"></textarea>
                   <button id='writeToWall' type="button" style="float:right;" class="btn btn-lg btn-primary">Send</button>
               </div>
+              {% if phoneNumber != None %}
+                <div class="col-md-8">
+                    <h2>Send SMS Message:</h2>
+                    <textarea id='sendSMSMessage' class="form-control" rows="2" placeholder="Text!"></textarea>
+                    <button id='sendSMS' type="button" style="float:right;" class="btn btn-lg btn-primary">Send</button>
+                    <div id="errorMsg"></div>
+                </div>
+              {% endif %}
           </div>
 
       </div>
@@ -39,7 +47,7 @@
               <div class="Jumbotron">
                   <h2>Posts</h2>
               <div id="postBagProfile">
-                    {% for sender, content, createdAt, senderPic, comments, postPK, isLiked, likes, likers in wallPosts %}
+                    {% for sender, content, createdAt, senderPic, comments, postPK, isLiked, likes, likers, videoURL in wallPosts %}
                       <div class="wallPost">
                         <div class="postSender">
                             <p>from: <a href="/user/{{ sender.username }}">  {{ sender.username }}</a></p>
@@ -52,7 +60,12 @@
                             {% endif %}
                         </div>
                         <div class="postContent">
-                          <p> {{ content }}</p>
+                          {% if videoURL != None %}
+                                {{ content }}
+                                <iframe width="100%" height="50%" src="https://www.youtube.com/embed/{{ videoURL }}" frameborder="0" allowfullscreen></iframe>
+                            {% else %}
+                                <p> {{ content }}</p>
+                            {% endif %}
                         </div>
                           {% for comment in comments %}
                               <div class="postComment">
