fixing twilio pagelaod bug

--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -32,7 +32,7 @@
                   <textarea id='wallTextArea' class="form-control" rows="3" placeholder="Say hello!"></textarea>
                   <button id='writeToWall' type="button" style="float:right;" class="btn btn-lg btn-primary">Send</button>
               </div>
-              {% if phoneNumber != None %}
+              {% if phoneNumber != "" %}
                 <div class="col-md-8">
                     <h2>Send SMS Message:</h2>
                     <textarea id='sendSMSMessage' class="form-control" rows="2" placeholder="Text!"></textarea>
